Переезд на реактивный стек (WebFlux, r2dbc) + настройки docker-compose и luquibase